# ocaml-postgrest

./: .envrc  Makefile  README.md  default.nix  dune-project  postgrest.install  postgrest.opam
lib/: client.ml  dune  types.ml  util.ml
test/: dune  example.ml
